# balipa

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: initial_data.py  main.py
backend/app/alembic/versions/: aeb966d614fe_items_and_locals.py
backend/app/api/api_v1/routers/: items.py  locals.py
backend/app/core/: config.py  security.py
backend/app/db/: crud.py  models.py  schemas.py
nginx/: nginx.conf
