[tool.black]
line-length = 80
[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ralphribeiro <ralph_ribeiro@msn.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"
starlette = "^0.13.6"
alembic = "^1.4.2"
SQLAlchemy = "^1.3.17"
celery = "^4.4.5"
redis = "^3.5.3"
flower = "^0.9.5"
httpx = "^0.13.3"
uvicorn = "^0.11.5"
pytest = "^5.4.3"
requests = "^2.23.0"
bcrypt = "^3.1.7"
pyjwt = "^1.7.1"
Authlib = "^0.14.3"
passlib = "^1.7.2"
email_validator = "^1.1.1"
sqlalchemy-utils = "^0.36.6"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.2"
psycopg2 = "^2.8.5"
ipython = "^7.15.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
